--- a/team_management/templates/tasks/my_tasks.html
+++ b/team_management/templates/tasks/my_tasks.html
@@ -21,7 +21,7 @@
                     <p class="card-text">{{ task.description|truncatechars:100 }}</p>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
-                            <strong>Создана:</strong> {{ task.created_by.username }} ({{ task.created_at|date:"d.m.Y
+                            <strong>Создана:</strong> ({{ task.created_at|date:"d.m.Y
                             H:i" }})
                         </li>
                         <li class="list-group-item">
