--- a/team_management/templates/base.html
+++ b/team_management/templates/base.html
@@ -32,9 +32,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'profile' %}">Мой профиль</a>
                 </li>
-                {% if user.is_authenticated %}
+                {% if user.is_staff %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'teams:my_teams' %}">Команды</a>
+                </li>
+                {% endif %}
+                {% if user.is_staff %}
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'create_task' %}">Задачи</a>
                 </li>
                 {% endif %}
                 <li class="nav-item nav-logout-form">
@@ -65,7 +71,8 @@
 {% if messages %}
 <div class="container mt-3">
     {% for message in messages %}
-    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert" id="message-{{ forloop.counter }}">
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert"
+         id="message-{{ forloop.counter }}">
         {{ message }}
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
@@ -73,16 +80,16 @@
 </div>
 
 <script>
-// Автоматическое скрытие сообщений через 5 секунд
-document.addEventListener('DOMContentLoaded', function() {
-    let messages = document.querySelectorAll('.alert');
-    messages.forEach(function(message) {
-        setTimeout(function() {
-            let alert = new bootstrap.Alert(message);
-            alert.close();
-        }, 5000);  // 5000 миллисекунд = 3 секунд
+    // Автоматическое скрытие сообщений через 5 секунд
+    document.addEventListener('DOMContentLoaded', function() {
+        let messages = document.querySelectorAll('.alert');
+        messages.forEach(function(message) {
+            setTimeout(function() {
+                let alert = new bootstrap.Alert(message);
+                alert.close();
+            }, 5000);  // 5000 миллисекунд = 3 секунд
+        });
     });
-});
 </script>
 {% endif %}
 <div class="container">
