--- a/team_management/templates/tasks/my_tasks.html
+++ b/team_management/templates/tasks/my_tasks.html
@@ -5,9 +5,9 @@
     <h2>Мои задачи</h2>
 
     <div class="mb-4">
-        <a href="{% url 'dashboard' %}" class="btn btn-secondary">Все задачи</a>
-        <a href="#" class="btn btn-secondary">Мои встречи</a>
-        <a href="#" class="btn btn-secondary">Оценки</a>
+        <a href="{% url 'dashboard' %}" class="btn btn-secondary">Назад</a>
+        <a href="{% url 'my_meetings' %}" class="btn btn-secondary">Мои встречи</a>
+        <a href="{% url 'profile' %}" class="btn btn-secondary">Оценки</a>
     </div>
 
     <div class="row">
